--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>no.ntnu</groupId>
-  <artifactId>remote-run-template</artifactId>
+  <artifactId>Java-dlj4-gpu-mnist-example</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>remote-run-template</name>
+  <name>Java-dlj4-gpu-mnist-example</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>14</maven.compiler.source>
-    <maven.compiler.target>14</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <dl4j-master.version>1.0.0-beta7</dl4j-master.version>
     <logback.version>1.2.3</logback.version>
   </properties>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
 
